// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getHarborsData success path harbors follow the expected shape 1`] = `
Object {
  "electricity": 1,
  "gate": 1,
  "imageFile": undefined,
  "lighting": 1,
  "maximumWidth": undefined,
  "municipality": undefined,
  "name": "Harbor 1",
  "numberOfPlaces": 0,
  "servicemapId": undefined,
  "streetAddress": undefined,
  "wasteCollection": 1,
  "water": 1,
  "wwwUrl": undefined,
  "zipCode": undefined,
}
`;

exports[`utils getHarborsData success path harbors follow the expected shape 2`] = `
Object {
  "electricity": 1,
  "gate": 1,
  "imageFile": undefined,
  "lighting": 2,
  "maximumWidth": undefined,
  "municipality": undefined,
  "name": "Harbor 2",
  "numberOfPlaces": 0,
  "servicemapId": undefined,
  "streetAddress": undefined,
  "wasteCollection": 2,
  "water": 1,
  "wwwUrl": undefined,
  "zipCode": undefined,
}
`;
